src/objects/NOFA__c.object
<CustomObject>
    <description>This is the first tab in the CNCS app</description>
    <fields>
        <fullName>Additional_Operating_Site_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Additional Operating Site Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Application_Package__c</fullName>
        <label>Allow Application Package</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Applications_CNCS__c</fullName>
        <label>Submit Sub-Applications Directly to CNCS</label>
        <picklist>
            <controllingField>Allow_Prime_Applicants_and_Sub_Applicant__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Concept_Paper__c</fullName>
        <label>Require Concept Paper</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Prime_Applicants_and_Sub_Applicant__c</fullName>
        <label>Allow Prime and Sub Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_planning_grants_for_this_NOFA__c</fullName>
        <label>Allow planning grants</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amendment_Justification_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Amendment Justification </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Justification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Justification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_num_of_FTEs__c</fullName>
        <inlineHelpText>Member Service Year</inlineHelpText>
        <label>Anticipated Number of MSYs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set to indicate the con tact is being processed in an apex context and validation rules can be bypassed</description>
        <label>Apex flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Due_Date__c</fullName>
        <formula>Parent_NOFA__r.Applications_due_date__c</formula>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Input_Deadline__c</fullName>
        <label>Application Input Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Maximum_Characters__c</fullName>
        <label>Application Maximum Characters</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Instructions__c</fullName>
        <label>Application Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applications_due_date__c</fullName>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review-In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_least_80_of_funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At least 80% of funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Award_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Award Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_approval_date__c</fullName>
        <label>Board Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Application_Limit__c</fullName>
        <label>Budget Application Limit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFDA_Name__c</fullName>
        <formula>CFDA_Number__r.CFDA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFDA Number</label>
        <referenceTo>CFDA_Number__c</referenceTo>
        <relationshipName>Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Corporate Program Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CNCS_Corporate_Program__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Corporate_Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>NOFOs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Capacity Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Capacity Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Grants_Awards__c</fullName>
        <label>Cash Grant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Characteristics_and_Priorities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Characteristics and Priorities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_this_if_competitive_sub_applicatio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if competitive sub application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_this_if_fixed_price_NOFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check this if fixed price NOFO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Clarification Summary </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clarification Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Sub_Applications_Should_be_Ranked__c</fullName>
        <label>Rank Competitive Sub-Applications</label>
        <picklist>
            <controllingField>Allow_Prime_Applicants_and_Sub_Applicant__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Sub_Applications__c</fullName>
        <label>Competitive Sub Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completeness_of_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completeness of Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as per # 2613.
Shravya</description>
        <label>Compliance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Standard_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date__c</fullName>
        <description>Concept Paper Due Date for this NOFA</description>
        <label>Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Input_Deadline__c</fullName>
        <label>Concept Paper Input Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Maximum_Characters__c</fullName>
        <label>Concept Paper Maximum Characters</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Submission_Instructions__c</fullName>
        <label>Concept Paper Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Type__c</fullName>
        <label>Concept Paper Type</label>
        <picklist>
            <controllingField>Allow_Concept_Paper__c</controllingField>
            <picklistValues>
                <fullName>Americorps NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps VISTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConfiguredBudgetForms__c</fullName>
        <label>ConfiguredBudgetForms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Continuation Changes </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuation Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cooperative_Agreement__c</fullName>
        <description>KY. Field for Award.</description>
        <label>Cooperative Agreement?</label>
        <picklist>
            <controllingField>Cash_Grants_Awards__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Program_Code__c</fullName>
        <description>Previous Value = Corporate_Program__r.ProductCode
Changed to the Current value on 4.1.16. (KY)</description>
        <formula>Corporate_Program__r.Code_Corporate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program_Short_Code__c</fullName>
        <formula>Corporate_Program__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Cost Effectiveness and Budget Adequacy </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Could_contracted_labor_be_used_Concept__c</fullName>
        <description>Could contracted labor be used? Added to NOFO Concept Paper Section</description>
        <label>Could contracted labor be used?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Different_from_Organization_address__c</fullName>
        <label>Different from Organization address?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Services_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Disaster Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disaster_Services_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Disaster Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIN_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>EIN Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Economic Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Economic Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_Org_Characteristics__c</fullName>
        <label>Eligible Organization Characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>State Commission/Alt Admin Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Affiliate of National Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statewide Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Action Agency/Prog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Government Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Organization (NGO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non-Profit (Multi-State)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Native American Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational/Technical College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black College/Univ. (HBCU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-Serving College/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribally controlled college/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Agency on Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chamber of Commerce/Bus. Assn.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Civic Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Management Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Inc. Senior Corps Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-based organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government, Municipal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Org_Types__c</fullName>
        <label>Eligible Organization Types</label>
        <picklist>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Internal Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National non-profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Designation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <formula>Point_of_contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <formula>Point_of_contact1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Conservation_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Energy Conservation Added to Application Setup Section</description>
        <label>Energy Conservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energy_Conservation_NOFO_Concept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Energy Conservation Added to NOFO Concept Section</description>
        <label>Energy Conservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energy Efficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Environmental Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Environmental Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_Conservati_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Environmental Stewardship &amp; Conservation Added to Application Setup Section</description>
        <label>Environmental Stewardship &amp; Conservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_Conservation_N__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Environmental Stewardship &amp; Conservation Added to NOFO Concept Section</description>
        <label>Environmental Stewardship &amp; Conservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Total_funds_Available__c</fullName>
        <label>Estimated Total Funds Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_num_Grants_to_be_Awarded__c</fullName>
        <label>Estimated Number of Grants to be Awarded</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_of_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Summary or Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_or_Plan_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Evaluation Summary or Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excl_from_mon_Universe__c</fullName>
        <label>Exclude from Monitoring Universe</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Executive Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Executive Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planning1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Yr__c</fullName>
        <label>NOFO Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount_Nofa__c</fullName>
        <label>Fixed Amount NOFO</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Area_and_Objectives_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Focus Area and Objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Focus Areas and Objectives - NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives_NCCC_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Focus Areas and Objectives - NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foster_Grandparents_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foster Grandparents Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_cap_per_Applicant__c</fullName>
        <label>Funding cap per Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Purpose__c</fullName>
        <label>Grant Purpose</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Have_funding_history_with_a_CNCS_Prog_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Have resource history w/a CNCS Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Healthy Futures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Healthy Futures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_No_Please_Mention_the_address__c</fullName>
        <label>If No,Please Mention the address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>